# financeindia

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  commitlint.config.js  financeindia.pyi  package-lock.json  package.json  pyproject.toml  test_all_endpoints.py  test_archive_slip.py  test_results.json  test_stream.py  test_zip_slip.py  verify_scrapers.py
.github/workflows/: CI.yml  publish.yml
.jules/: sentinel.md
financeindia/: __init__.py
src/: archive.rs  async_client.rs  capitalmarket.rs  commodities.rs  common.rs  common.rs.orig  corporate.rs  currency.rs  derivatives.rs  equities.rs  error.rs  indices.rs  lib.rs  macro_data.rs  models.rs  slb.rs  streaming.rs  surveillance.rs
tests/: test_client.py
