[package]
name = "financeindia"
version = "0.1.0-alpha.1"
edition = "2024"
description = "A high-performance, lightweight Python library written in Rust for fetching Indian financial market data (NSE)."
license = "MIT"
homepage = "https://github.com/sandeep-jaiswar/financeindia"
repository = "https://github.com/sandeep-jaiswar/financeindia"

[lib]
name = "financeindia"
crate-type = ["cdylib"]

[dependencies]
# Use 0.23 for Python 3.13 support
pyo3 = { version = "0.23", features = ["extension-module"] }
# Ensure cookies feature is enabled
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "cookies"] }
chrono = "0.4"
zip = "2.2"
percent-encoding = "2.3"
quick-xml = "0.37"
serde_json = "1.0"