[package]
name = "financeindia"
version = "0.1.0-alpha.4"
edition = "2024"
description = "A high-performance, lightweight Python library written in Rust for fetching Indian financial market data (NSE)."
license = "MIT"
homepage = "https://github.com/sandeep-jaiswar/financeindia"
repository = "https://github.com/sandeep-jaiswar/financeindia"

[lib]
name = "financeindia"
crate-type = ["cdylib"]

[dependencies]
# Use 0.23 for Python 3.13 support
pyo3 = { version = "0.24", features = ["extension-module"] }
# Ensure cookies feature is enabled
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "json", "gzip", "stream"] }
chrono = "0.4"
zip = "2.2"
percent-encoding = "2.3"
quick-xml = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
bytes = "1.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
log = "0.4"
url = "2.5"
thiserror = "2.0"
